<resources>
    <string name="app_name">Layouting</string>
    <string name="logo_app">Logo App</string>
    <string name="activity_amzesmoro">Activity Amzesmoro</string>
    <string name="activity_syafei">Activity Syafei</string>
    <string name="activity_hendro">Activity Hendro</string>
    <string name="activity_jafar">Activity Jafar</string>
    <string name="ini_activity_mas_amzes">Ini activity Mas Amzes</string>
    <string name="ini_activity_mas_syafei">Activity Syafei Canva Home</string>
    <string name="ini_activity_mas_hendro">Ini activity Mas Hendro</string>
    <string name="main_picture">Main Picture</string>
    <string name="ini_activity_jafar">Ini activity Jafar</string>
    <string name="telegram">Telegram</string>
    <string name="contest_menu_button">Contest Menu Button</string>
    <string name="search_button">Search Button</string>
    <string name="new_message_button">New Message Button</string>
    <string name="my_cards">My Cards</string>
    <string name="content_desc_add_card">Button Add Card</string>
    <string name="transfer">Transfer</string>
    <string name="pay">Pay</string>
    <string name="amount_card">Rp 100.000.000</string>
    <string name="total_balance">Total Balance</string>
    <string name="card_number">0903 1234 5678 1211</string>
    <string name="exp_date">01/26</string>
    <string name="new_activities">New Activities</string>
    <string name="view_all">View all</string>
    <string name="logo_activity">Ini Logo Activity</string>
    <string name="google_adsense">Google Adsense</string>
    <string name="now">Now</string>
    <string name="rp500_000">+ Rp500.000</string>
    <string name="starbucks_coffee">Starbucks Coffee</string>
    <string name="_09_14_am">09.14 AM</string>
    <string name="rp76_000">- Rp76.000</string>
    <string name="netflix">Netflix</string>
    <string name="_09_01_am">09.01 AM</string>
    <string name="send_again">Send again to</string>
    <string name="user_img_content">Ini gambar user</string>
    <string name="user_name">Jaxxxe</string>
    <string name="home">Home</string>
    <string name="statistic">Statistic</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
</resources>