<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    home, statistic, notification, account/profile-->
    <item
        android:id="@+id/bottom_navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_solid"
        android:title="@string/home"/>
    <item
        android:id="@+id/bottom_navigation_statistic"
        android:enabled="true"
        android:icon="@drawable/ic_statistic_solid"
        android:title="@string/statistic" />
    <item
        android:id="@+id/bottom_navigation_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification_solid"
        android:title="@string/notification" />
    <item
        android:id="@+id/bottom_navigation_account"
        android:enabled="true"
        android:icon="@drawable/ic_profile_solid"
        android:title="@string/account" />
</menu>