<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_activity"
        android:layout_width="@dimen/dimen_48dp"
        android:layout_height="@dimen/dimen_48dp"
        android:contentDescription="@string/logo_activity"
        android:src="@drawable/img_netflix"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activity_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/netflix"
        android:textColor="@color/black"
        android:textSize="@dimen/ts_16"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_activity"/>

    <TextView
        android:id="@+id/tv_activity_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/_09_01_am"
        android:textColor="@color/light_grey"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_name"
        app:layout_constraintStart_toEndOf="@id/iv_activity"/>

    <TextView
        android:id="@+id/tv_activity_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rp76_000"
        android:textColor="@color/red_color"
        android:textSize="@dimen/ts_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>