<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/card_color"
    app:cardCornerRadius="@dimen/dimen_24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_24dp">

        <TextView
            android:id="@+id/tv_amount_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_card"
            android:textSize="@dimen/ts_20"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_balance"
            android:textSize="@dimen/ts_14"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textSize="@dimen/ts_18"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="@dimen/dimen_80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_balance"/>

        <TextView
            android:id="@+id/tv_expired_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exp_date"
            android:textSize="@dimen/ts_18"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="@dimen/dimen_80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_balance"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>